redesignedoj/files_usersubmissions/73/submission.txt
15_PROB7_code.cpp: In function ‘int main()’:
15_PROB7_code.cpp:5:10: error: expected identifier before numeric constant
   return 0;
          ^
15_PROB7_code.cpp:5:3: error: named return values are no longer supported
   return 0;
   ^~~~~~
15_PROB7_code.cpp:6:1: error: expected ‘{’ at end of input
 }
 ^
